# oso

./: .pdm-python  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: build-cloudquery-connectors.yml  indexer-import-oss-directory.yml  run-cloudquery-connectors.yml
apps/docs/: docusaurus.config.ts
cloudquery/dune-contract-usage/dune_contract_usage/: load_csvs.py  plugin.py
cloudquery/dune-contract-usage/dune_contract_usage/client/: client.py
cloudquery/dune-contract-usage/dune_contract_usage/tables/: table.py
indexer/: package.json  tsconfig.json
indexer/src/: cli.ts
indexer/src/db/: data-export-pointer.ts  data-source.ts  orm-entities.ts
indexer/src/db/migration/: 1698302054981-add-external-data-export-pointer-table.ts
indexer/src/recorder/: group.test.ts  group.ts  recorder.ts  testing.ts
indexer/src/scheduler/: types.ts
indexer/src/scripts/: upload-contracts-table-to-dune.ts
indexer/src/utils/: ranges.test.ts  ranges.ts
ops/pkgcloudquery/: script.py
ops/utils/logging/: __init__.py
oso/: __init__.py
warehouse/: package.json
warehouse/cloudquery-dune-contract-usage/: pyproject.toml
warehouse/cloudquery-example-plugin/: pyproject.toml
warehouse/oso_dagster/: assets.py  goldsky.py
