[tool.poetry]
name = "oso"
version = "1.0.0"
description = "Impact measurement for open source software"
authors = ["Kariba Labs"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "ops" }]

[tool.poetry.dependencies]
python = "^3.11"
example-plugin = { path = "cloudquery/example-plugin", develop = true }
dune-contract-usage = { path = "cloudquery/dune-contract-usage", develop = true }
google-cloud-bigquery = "^3.17.1"
pendulum = "^3.0.0"
google-api-python-client = "^2.116.0"
cloud-sql-python-connector = { extras = ["pg8000"], version = "^1.6.0" }
sqlalchemy = "^2.0.25"
google-cloud-storage = "^2.14.0"
python-dotenv = "^1.0.1"
click = "^8.1.7"

[tool.poetry.scripts]
bq2cloudsql = 'ops.bq2cloudsql.script:run'
pkgcloudquery = 'ops.pkgcloudquery.script:run'

[tool.poetry.group.dev.dependencies]
ipython = "^8.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
